@@ -33,8 +33,8 @@ In <application>Outlook</application> and
 calendar items, they still show up in the calendar, but with the
 summary changed to something like "Private item", and they can't be
 opened. See <ulink
-url="http://bugzilla.ximian.com/show_bug.cgi?id=56066">Bug
-56066</ulink>.
+url="http://bugzilla.gnome.org/show_bug.cgi?id=256066">Bug
+256066</ulink>.
 </para></note>
 
 <para>
