@@ -36,8 +36,8 @@ are then used to construct a URL (using the account's SSL settings).
 (One problem with this approach is that the returned
 <structfield>exchange_server</structfield> is not guaranteed to be running
 <application>OWA</application>. See <ulink
-url="http://bugzilla.ximian.com/show_bug.cgi?id=58526">Bug
-52526</ulink>.)
+url="http://bugzilla.gnome.org/show_bug.cgi?id=258526">Bug
+258526</ulink>.)
 </para></note>
 
 <para>
