@@ -1,3 +1,9 @@
+2008-04-22  Matthew Barnes  <mbarnes@redhat.com>
+
+	* docs/reference/arch/bug-private.xml:
+	* docs/reference/features/other-users.xml:
+	Fix some outdated Bugzilla links.
+
 2008-04-17  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #526740
